# project

./: .gitignore
c++_project/BuffDetect/: CMakeLists.txt
c++_project/BuffDetect/general/GxCamera/: GxCamera.cpp  GxCamera.h
c++_project/BuffDetect/include/: BuffDetect.hpp  BuffDetect_new.hpp
c++_project/BuffDetect/src/: main.cpp
c++_project/My_STL/: a.out  main.cpp  test.cpp
c++_project/My_STL/include/: vector.hpp
c++_project/cpp_practice/: main.cpp
c++_project/made4/: README.md
c++_project/made4/code/workspace/src/jubot/jubot_driver_interfaces/: CMakeLists.txt  package.xml
c++_project/made4/code/workspace/src/jubot/jubot_driver_interfaces/msg/: PIDReconfig.msg
c++_project/made4/code/workspace/src/jubot/jubot_driver_interfaces/src/: jubot_driver.cpp
c++_project/made4/code/workspace/src/mypkg/interfaces/: CMakeLists.txt  package.xml
c++_project/made4/code/workspace/src/mypkg/pubsub/: CMakeLists.txt  package.xml
c++_project/made4/code/workspace/src/mypkg/pubsub/include/pubsub/: pub.hpp  sub.hpp
c++_project/made4/code/workspace/src/mypkg/pubsub/launch/: pubsub_pyrun.launch.py  pubsub_run.launch.py
c++_project/made4/code/workspace/src/mypkg/pubsub/scripts/: pub.py
c++_project/made4/code/workspace/src/mypkg/pubsub/src/: pub.cpp  sub.cpp
c++_project/made4/data/: made.md
c++_project/my_ros_bot/workspace/install/: local_setup.sh  setup.sh
c++_project/my_ros_bot/workspace/log/: latest_build
c++_project/my_ros_bot/workspace/src/robot_describtion/: CMakeLists.txt
c++_project/my_ros_bot/workspace/src/robot_world/: CMakeLists.txt
c++_project/other_project/car_demo/: auto.sh  readme.md
c++_project/other_project/car_demo/config/: config.yaml
c++_project/other_project/car_demo/include/detector/: detector.hpp  (+1 more)
c++_project/other_project/car_demo/src/: main.cpp
c++_project/other_project/car_project/: CMakeLists.txt
c++_project/other_project/car_project/include/detector/: detector.hpp
c++_project/other_project/car_project/include/serial/: serial.hpp  serial_port.hpp
c++_project/other_project/car_project/src/: main.cpp
c++_project/practice/: learning_log.md
c++_project/practice/cppreference/: atomic.cpp  future.cpp  lambda.cpp  learning_log.md  mutex.cpp  parameter_pack.cpp  templete.cpp
c++_project/practice/practice1/: a.out  test.cpp
c++_project/practice/test/: a.out  test.cpp
c++_project/rm_vision4/: CMakeLists.txt  README.md  auto.sh
c++_project/rm_vision4/src/c++/cppcode/: main.cpp
c++_project/rm_vision4/src/c++/include/debug/: debug.hpp
c++_project/rm_vision4/src/c++/include/detector/: armor.hpp  armor_detector.hpp  armor_tacker.hpp  buff_detector.hpp  detector.hpp  number_classifier.hpp
c++_project/rm_vision4/src/c++/include/image_updating/: image_updating.hpp
c++_project/rm_vision4/src/c++/include/image_updating/GxCamera/: GxCamera.cpp  GxCamera.h
c++_project/rm_vision4/src/c++/include/record/: record.hpp
c++_project/rm_vision4/src/c++/include/serial/: serial.hpp  serial_port.hpp
c++_project/rm_vision4/src/c++/include/solver/: adaptive_ekf.hpp  armor_solver.hpp  predictor_adaptive_ekf.hpp  solver.hpp  tacker.hpp
c++_project/rm_vision4/src/data_file/data/init/: autoaim-param.yml  camera_params.xml
c++_project/rm_vision4/src/data_file/data/init/serial_port/: name_arr  speed_arr
c++_project/rm_vision4/src/data_file/docs/: design.drawio
c++_project/rm_vision4/src/data_file/logs/: error_20230415-093451.20240  info_20230415-093451.20240  rm_version4.ERROR  rm_version4.INFO  rm_version4.WARNING
c++_project/rm_vision4/src/general/custom_data/: custom_data.hpp  detector_data.hpp  lower_computer_data.hpp  serial_data.hpp
c++_project/rm_vision4/src/general/message/: message.hpp  obj_manager.hpp
c++_project/rm_vision4/src/general/moudle/: glog.hpp
c++_project/rm_vision4/src/python/: demo_rm_version4.py
c++_project/yolo5_gxapi/: CMakeLists.txt  log.md
c++_project/yolo5_gxapi/DataExchange/: Yolodata.xml  camera_params.xml
c++_project/yolo5_gxapi/scripts/: detect.py
c++_project/yolo5_gxapi/scripts/data/: armor.yaml
c++_project/yolo5_gxapi/scripts/runs/train/exp/: events.out.tfevents.1673365012.davi-Z3-Air-Series-GK5MP5O.7145.0  events.out.tfevents.1673451711.davi-Z3-Air-Series-GK5MP5O.2669.0  events.out.tfevents.1673508811.davi-Z3-Air-Series-GK5MP5O.2919.0  events.out.tfevents.1673518925.davi-Z3-Air-Series-GK5MP5O.3361.0  events.out.tfevents.1673524161.davi-Z3-Air-Series-GK5MP5O.2997.0
c++_project/yolo5_gxapi/scripts/utils/: general.py
c++_project/yolo5_gxapi/src/ArmorCenter/: ArmorCenter.cpp
java_project/demo/: pom.xml
java_project/test/: Test.java
java_project/test/test/: Employee.java
python_project/: camera_calibrator.py
python_project/GAN_project/: main.py  main_window.py  test.py
python_project/GAN_project/front/: __init__.py  generator_form.py  signals.py  threads.py  train_form.py
python_project/GAN_project/front/back/: gan.py  main.py  train.py
python_project/machine_learning/CNN_project/: main.py
python_project/machine_learning/CNN_project/detect/: detector.py
python_project/machine_learning/CNN_project/train/: trainner.py
python_project/machine_learning/CNN_project_2/: main.py
python_project/machine_learning/CNN_project_2/detect/: detector.py  user_event.py
python_project/machine_learning/CNN_project_2/logger/: logger.py
python_project/machine_learning/CNN_project_2/model_test/: show.py  test.py
python_project/machine_learning/CNN_project_2/train/: __init__.py  get_data.py  trainner.py
python_project/machine_learning/SVM_test1/: detect.py  train.py
python_project/machine_learning/SVM_test2/: train.py
python_project/machine_learning/my_pytorch_project/: script.py
python_project/machine_learning/num_detector/: script.py
python_project/machine_learning/test/: svm.py  user_draw.py
python_project/yolo5_gxapi/: main.cpp
python_project/yolo5_gxapi/scripts/: export.py
python_project/yolo5_gxapi/scripts/utils/: dataloaders.py
python_project/yolo5_gxapi/src/ArmorCenter/: AngleSolve.cpp  AngleSolve.h  ArmorCenter.h
result/: yolov5s.json  yolov5s.xml
(+104 files in other folders)
